--- a/index.html
+++ b/index.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>Realtime Chat socketio</title>
 </head>
 <body>
-    <h1>It's working !</h1>
+    <div id="app">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 offset-lg-3">
+                    <div class="card bg-warning">
+                        <div class="card-header text-white">
+                            Realtime Chat
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item" v-for="(message, index) in messages">
+                                {{message}}
+                            </li>
+                        </ul>
+
+                        <div class="card-body">
+                            <form @submit.prevent="send">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" v-model="newMessage" placeholder="Enter your message here">
+                                </div>
+                                <!-- <button type="submit" class="btn btn-primary btn-sm">Send</button> -->
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script>
+        var socket = io();
+        let app = new Vue({
+            el: '#app',
+            data: {
+                newMessage: null,
+                messages: []
+            },
+
+            created(){
+                console.log("vue connected")
+
+                socket.on('chat-message', (data) => {
+                    this.messages.push(data);
+                });
+            },
+
+            methods: {
+                send() {
+                    this.messages.push(this.newMessage);
+                    socket.emit('send-message', this.message);
+                    this.newMessage = null;
+                }
+            }
+        });
+    </script>
 </body>
 </html>
